package org.libreria.command;

public interface CommandInterface {
    void execute();
    void undo();
}